test_cases/positive/chain.snek
export DEFAULT = Image("quay.io/toolbx-images/alpine-toolbox") > Exec("echo nice");
