test_cases/negative/compiler/argument_mismatch_custom.snek
def Foo(container) {
    return container > Exec("echo hello");
}

export DEFAULT = Foo();
